# ChangeLog for media-plugins/kipi-plugins
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/kipi-plugins/ChangeLog,v 1.37 2008/06/07 14:39:56 ingmar Exp $

  07 Jun 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  kipi-plugins-0.1.4-r1.ebuild, kipi-plugins-0.1.5.ebuild:
  Add $DEPEND to $RDEPEND, bug 225217.

  25 May 2008; Markus Meier <maekke@gentoo.org>
  kipi-plugins-0.1.4-r1.ebuild:
  amd64 stable, bug #221855

  23 May 2008; Christian Faulhammer <opfer@gentoo.org>
  kipi-plugins-0.1.4-r1.ebuild, kipi-plugins-0.1.5.ebuild:
  quote variable

  23 May 2008; Christian Faulhammer <opfer@gentoo.org>
  kipi-plugins-0.1.4-r1.ebuild:
  stable x86, bug 221855

  17 May 2008; Carsten Lohrke <carlo@gentoo.org>
  kipi-plugins-0.1.4-r1.ebuild:
  Restore ppc...

  17 May 2008; Carsten Lohrke <carlo@gentoo.org>
  kipi-plugins-0.1.0_rc1.ebuild, -kipi-plugins-0.1.4.ebuild,
  kipi-plugins-0.1.4-r1.ebuild, kipi-plugins-0.1.5.ebuild:
  Clean up. Remove deprecated slot_rebuild() check. Back to ~ppc.

  16 May 2008; nixnut <nixnut@gentoo.org> kipi-plugins-0.1.4-r1.ebuild:
  Stable on ppc wrt bug 221855

  10 Apr 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  kipi-plugins-0.1.5.ebuild:
  media-plugins/kipi-plugins-0.1.5 needs >=libkcraw-0.1.4, bug 217124.

  09 Apr 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  kipi-plugins-0.1.5.ebuild:
  Depend on "|| ( kde-base/libkcal:3.5 kde-base/kdepim:3.5 )" for
  USE=calendar, use EAPI=1 for SLOT dependencies. Bug 217001.

  08 Apr 2008; Tobias Heinlein <keytoaster@gentoo.org>
  kipi-plugins-0.1.5.ebuild:
  Adding some USE flags for plugins with optional dependencies.

*kipi-plugins-0.1.5 (08 Apr 2008)

  08 Apr 2008; Tobias Heinlein <keytoaster@gentoo.org>
  +kipi-plugins-0.1.5.ebuild:
  Version bump, see bug #216878. New (upstream) build system behaviour: Some
  plugins are disabled if dependencies are not met, see