@@ -6,14 +6,14 @@ DIST kipi-plugins-0.1.0-rc1.tar.bz2 3609994 RMD160 ff3a62876970c6394a5ef6ab18050
 DIST kipi-plugins-0.1.4.tar.bz2 8529867 RMD160 bc8b6d0d9bc8b30afbaf5ac5ccbc4862aa3a80e2 SHA1 53d3609a257dfc0e429681438c60486cf4815fc6 SHA256 eb7ceed6eb6893ccabee1aebf5c08379199a96eade2886daf54445664c786d53
 DIST kipi-plugins-0.1.5.tar.bz2 8874079 RMD160 7dca88ebb3689347a798db86a616ea89eb3968b6 SHA1 889ccc177ac4200a8b9b4c94688757e2cb99cc11 SHA256 da488c9d7778fb251805626b9b724d8196531e4a56dc01b6b02be80f70c7a14e
 EBUILD kipi-plugins-0.1.0_rc1.ebuild 1140 RMD160 5fae5d7b380782ed3d47f8a631319775a35156b0 SHA1 394a018d75fdcf201614fd9df17b230fca95c918 SHA256 f184c36b42cb99ee0911d707394352381e49b3929b2ce8394ff84c148cca171c
-EBUILD kipi-plugins-0.1.4-r1.ebuild 1555 RMD160 0c526dc118c60594e84719ef06b57b85e36de434 SHA1 7a0b30bfce4b6ef48d1a5e78bbeee98980b7ab54 SHA256 f17beade9a34771512eb3a35be59c70437040984b944beaa063245604ae54c09
-EBUILD kipi-plugins-0.1.5.ebuild 1681 RMD160 25edb223e996f22955ad4fb53e51c035772a0342 SHA1 76d6291622cb8e919443179b4c73a455d7ae0746 SHA256 d3b59409c944b3ed0616a7a47141869486eddf4d297aa48a6d40e38ac7e37d73
-MISC ChangeLog 6806 RMD160 06e373909caa8572ef3cf15c5d837df7bcecc579 SHA1 e2d1d8ba0aa1d049c8eff6f870a099fddb68dad2 SHA256 04e71b2734459bca51eafe80d2537f55b1769f5c2f0f3f93d77ec08551feb42b
+EBUILD kipi-plugins-0.1.4-r1.ebuild 1604 RMD160 c5fdbfae6fb28bacda57d4f2a1b111c5c4bab2ae SHA1 853a86c321d9e33ffef991c0729e4062ed7f0afe SHA256 c5f9476b1ae6790360dcda7eee2a32c2ff86ac23ed9ccf8f2a23ae201df2be90
+EBUILD kipi-plugins-0.1.5.ebuild 1729 RMD160 7a329385119b169a854cccdb963fa1919aa76700 SHA1 649be544be96694ca8fa5e6056857c3d1e2c2bd8 SHA256 50642f28c19cbe41124be4e7acb2ea4b34458056e13f4a5e1fbaeb0addcbd3a4
+MISC ChangeLog 6995 RMD160 cf76caec8bad589e8ad57f57a7fb87706f210b51 SHA1 bcb6b4f33ae156745b204a6af1d57d5ca8a23aa4 SHA256 5676d4125c9cff284c8b45d350f33a5ac9abc938e545a4aa29932e29cf44ebcb
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkhKnYMACgkQB18eXLOpYdlq+QCeJiPwzRXtNQ+yJOqH2e4+Lhdq
-ZR8AnR89s2uyFmPshATEb+lfnh8my0FP
-=doFW
+iEYEARECAAYFAkhnsRcACgkQKfQzuokD2IrhvACdF2f5IW3bW4zC8fdY581IO2jQ
+bKcAmwR6HxCKf0ztAJItZIEasDHBUdws
+=iaGL
 -----END PGP SIGNATURE-----
